Fix extra margin on images

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -117,7 +117,7 @@ body {
       @include links;
     }
 
-    img, svg {
+    svg {
       margin-bottom: 32px;
     }
 
